# orion-release

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  launch_orion.py  manifest.md  orion-release.txt  orion_policy.yaml  start_orion.bat  start_orion.sh
extensions/: settings.yaml
extensions/orion_ltm/: __init__.py  ltm_config.yaml  script.py
user-data/: settings.yaml
user-data/orion_cli/: cli.py  pyproject.toml
user-data/orion_cli/commands/: __init__.py  identity.py  ingest.py
user-data/orion_cli/data/: persona_template.yaml
user-data/orion_cli/shared/: __init__.py  embedding.py  memory_core.py  paths.py
user_data/characters/: Orion.yaml
user_data/orion/data/: README.md  config.yaml  identity.yaml  (+1 more)
user_data/orion_cli/: README.md  __init__.py  cli.py  pyproject.toml
user_data/orion_cli/commands/: bootstrap.py  bootstrap_semantic_candidates.py  canonize_annotated_logs.py  config.py  curate.py  identity.py  ingest.py  inspect_chroma.py  memory.py  semantic.py  semantic_seed.py  tools.py
user_data/orion_cli/data/: config_template.yaml  default_config.yaml  identity_template.yaml  orion_persona.yaml  schema.json  semantic_template.yaml
user_data/orion_cli/semantic/: REFLECTION_CONTRACT.md  filters.py  heuristics_extract.py  onboarding_preview.py  promote.py  seed.py  semantic_baseline.yaml
user_data/orion_cli/settings/: __init__.py  config_loader.py
user_data/orion_cli/shared/: archivist_client.py  config.py  embedding.py  identity_core.py  memory_core.py  paths.py  utils.py
(+191 files in other folders)
